--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css"></link>
+<script src="script.js"></script>
 </head>
 <body>
 <h1>Minesweeper!</h1>
